--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#7D7A77</color>
     <color name="colorPrimaryDark">#5B5855</color>
     <color name="colorAccent">#F77274</color>
+    <color name="light_gray">#f4f2f0</color>
+
 </resources>
