--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -1,122 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <FrameLayout
-        android:id="@+id/photoContainer"
+    <data>
+        <variable
+            name="viewModel"
+            type="br.com.tramalho.enjoeitest.presentation.ProductItemViewModel" />
+    </data>
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_product_list"
-        android:background="@color/light_gray">
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
 
-        <ImageView
-            android:id="@+id/photo"
+        <FrameLayout
+            android:id="@+id/photoContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:layout_width="39dp"
-            android:layout_height="20dp"
-            android:layout_gravity="right"
-            android:background="@color/colorAccent"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            tools:text="-10%" />
-
-    </FrameLayout>
-
-    <RelativeLayout
-        android:id="@+id/productInfoContainer"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@drawable/outline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/photoContainer">
-
-        <TextView
-            android:id="@+id/productTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="10dp"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            tools:text="quadro gatinho" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/productTitle"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/colorAccent"
-            tools:text="R$ 42" />
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/outline"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:weightSum="2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/productInfoContainer">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_height="@dimen/height_product_list"
+            android:background="@color/light_gray">
 
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerInParent="true"
-                tools:src="@mipmap/ic_launcher" />
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/outline">
-
-            <ImageView
-                android:id="@+id/likeImg"
-                android:layout_width="19dp"
-                android:layout_height="24dp"
-                android:layout_marginBottom="13dp"
-                android:layout_marginEnd="11dp"
-                android:layout_marginRight="11dp"
-                android:layout_marginTop="13dp"
-                android:layout_toLeftOf="@id/likeText"
-                android:layout_toStartOf="@id/likeText"
-                android:src="@drawable/ic_like" />
+                android:id="@+id/photo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
             <TextView
-                android:id="@+id/likeText"
-                android:layout_width="10dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="18dp"
-                android:layout_marginRight="18dp"
-                android:textSize="15sp"
-                tools:text="87" />
+                android:layout_width="39dp"
+                android:layout_height="20dp"
+                android:layout_gravity="end"
+                android:background="@color/colorAccent"
+                android:text="@{viewModel.discount}"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:visibility="@{viewModel.discountVisibility, default = gone}"
+                tools:text="-10%"
+                tools:visibility="visible" />
 
+        </FrameLayout>
+
+        <RelativeLayout
+            android:id="@+id/productInfoContainer"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@drawable/outline"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/photoContainer">
+
+            <TextView
+                android:id="@+id/productTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="10dp"
+                android:textAlignment="center"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                tools:text="quadro gatinho"
+                android:text="@{viewModel.title}"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/productTitle"
+                android:layout_alignParentBottom="true"
+                android:textAlignment="center"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dp"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/colorAccent"
+                tools:text="R$ 42"
+                android:text="@{viewModel.price}"/>
 
         </RelativeLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/outline"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/productInfoContainer">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerInParent="true"
+                    tools:src="@mipmap/ic_launcher" />
+            </RelativeLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/outline">
+
+                <ImageView
+                    android:id="@+id/likeImg"
+                    android:layout_width="19dp"
+                    android:layout_height="24dp"
+                    android:layout_marginBottom="13dp"
+                    android:layout_marginEnd="45dp"
+                    android:layout_marginRight="45dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/ic_like"
+                    android:layout_alignParentEnd="true" />
+
+                <TextView
+                    android:id="@+id/likeText"
+                    android:layout_width="16dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="18dp"
+                    android:layout_marginRight="18dp"
+                    android:textAlignment="center"
+                    android:textSize="15sp"
+                    tools:text="87"
+                    android:text="@{viewModel.likes}"/>
+
+            </RelativeLayout>
+        </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
+
+</layout>
