--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -39,11 +39,15 @@
 
         </FrameLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/productInfoContainer"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/outline"
+            android:minHeight="60dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/photoContainer">
 
@@ -51,31 +55,29 @@
                 android:id="@+id/productTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginTop="10dp"
+                android:text="@{viewModel.title}"
                 android:textAlignment="center"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                tools:text="quadro gatinho"
-                android:text="@{viewModel.title}"/>
+                tools:text="quadro gatinho" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/productTitle"
-                android:layout_alignParentBottom="true"
-                android:textAlignment="center"
-                android:layout_centerHorizontal="true"
                 android:layout_marginBottom="10dp"
+                android:text="@{viewModel.price}"
+                android:textAlignment="center"
+                android:layout_gravity="center"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/colorAccent"
-                tools:text="R$ 42"
-                android:text="@{viewModel.price}"/>
+                tools:text="R$ 42" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/outline"
@@ -95,7 +97,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_centerInParent="true"
-                    tools:src="@mipmap/ic_launcher" />
+                    android:src="@drawable/hint_img" />
             </RelativeLayout>
 
 
@@ -109,13 +111,13 @@
                     android:id="@+id/likeImg"
                     android:layout_width="19dp"
                     android:layout_height="24dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
                     android:layout_marginBottom="13dp"
                     android:layout_marginEnd="45dp"
                     android:layout_marginRight="45dp"
                     android:layout_marginTop="13dp"
-                    android:layout_alignParentRight="true"
-                    android:src="@drawable/ic_like"
-                    android:layout_alignParentEnd="true" />
+                    android:src="@drawable/ic_like" />
 
                 <TextView
                     android:id="@+id/likeText"
@@ -126,10 +128,10 @@
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="18dp"
                     android:layout_marginRight="18dp"
+                    android:text="@{viewModel.likes}"
                     android:textAlignment="center"
                     android:textSize="15sp"
-                    tools:text="87"
-                    android:text="@{viewModel.likes}"/>
+                    tools:text="87" />
 
             </RelativeLayout>
         </LinearLayout>
