--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -17,13 +17,17 @@
         <FrameLayout
             android:id="@+id/photoContainer"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/height_product_list"
-            android:background="@color/light_gray">
+            android:layout_height="match_parent"
+            android:minHeight="@dimen/height_product_list">
 
             <ImageView
                 android:id="@+id/photo"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                tools:srcCompat="@mipmap/ic_launcher"
+                app:imageUrl="@{viewModel.productImgUrl}"
+                />
 
             <TextView
                 android:layout_width="39dp"
@@ -46,6 +50,7 @@
             android:background="@drawable/outline"
             android:minHeight="60dp"
             android:orientation="vertical"
+            android:layout_marginTop="0dp"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +102,10 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_centerInParent="true"
-                    android:src="@drawable/hint_img" />
+                    app:srcCompat="@drawable/hint_img"
+                    app:imageUrl="@{viewModel.avatarImgUrl}"
+                    app:rounded="@{50}"
+                    />
             </RelativeLayout>
 
 
@@ -117,7 +125,7 @@
                     android:layout_marginEnd="45dp"
                     android:layout_marginRight="45dp"
                     android:layout_marginTop="13dp"
-                    android:src="@drawable/ic_like" />
+                    app:srcCompat="@drawable/ic_like" />
 
                 <TextView
                     android:id="@+id/likeText"
