--- a/app/src/main/res/drawable/circular_outline.xml
+++ b/app/src/main/res/drawable/circular_outline.xml
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners />
+    android:shape="oval">
+
     <solid android:color="@android:color/transparent" />
+
     <stroke
         android:width="1dp"
         android:color="@color/light_gray" />
