--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="br.com.tramalho.enjoeitest.presentation.ProductItemViewModel" />
@@ -12,7 +13,11 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="?attr/selectableItemBackground"
+        android:onClick="@{viewModel::onClickFriend}">
 
         <FrameLayout
             android:id="@+id/photoContainer"
@@ -25,9 +30,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
-                tools:srcCompat="@mipmap/ic_launcher"
                 app:imageUrl="@{viewModel.productImgUrl}"
-                />
+                app:placeholder="@{viewModel.placeHolderImg}"
+                tools:srcCompat="@mipmap/ic_launcher" />
 
             <TextView
                 android:layout_width="39dp"
@@ -47,10 +52,10 @@
             android:id="@+id/productInfoContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
             android:background="@drawable/outline"
             android:minHeight="60dp"
             android:orientation="vertical"
-            android:layout_marginTop="0dp"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,10 +76,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginBottom="10dp"
                 android:text="@{viewModel.price}"
                 android:textAlignment="center"
-                android:layout_gravity="center"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/colorAccent"
                 tools:text="R$ 42" />
@@ -102,10 +107,9 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_centerInParent="true"
-                    app:srcCompat="@drawable/hint_img"
                     app:imageUrl="@{viewModel.avatarImgUrl}"
                     app:rounded="@{50}"
-                    />
+                    app:srcCompat="@drawable/hint_img" />
             </RelativeLayout>
 
 
@@ -129,7 +133,7 @@
 
                 <TextView
                     android:id="@+id/likeText"
-                    android:layout_width="16dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
