--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,20 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="AppTheme.Detail" parent="AppTheme.Base" />
+    <style name="AppTheme.Home" parent="AppTheme.Base" />
+
+
+    <style name="exp_toolbar_title" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">0dp</item>
+        <item name="android:textColor">@android:color/transparent</item>
     </style>
 
 </resources>
