--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="br.com.tramalho.enjoeitest.presentation.ProductDetailViewModel" />
+            type="br.com.tramalho.enjoeitest.presentation.viewmodel.ProductDetailViewModel" />
     </data>
 
     <android.support.design.widget.CoordinatorLayout
@@ -35,16 +35,11 @@
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:statusBarScrim="?attr/colorAccent">
 
-                <ImageView
-                    android:id="@+id/image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/placeholder_img"
+                <android.support.v7.widget.RecyclerView
                     android:fitsSystemWindows="true"
-                    android:scaleType="centerCrop"
-                    app:imageUrl="@{viewModel.productImgUrl}"
-                    app:layout_collapseMode="parallax"
-                    app:placeholder="@{viewModel.placeHolderImg}" />
+                    android:id="@+id/carouselImgs"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
