--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="br.com.tramalho.enjoeitest.presentation.ProductItemViewModel" />
+            type="br.com.tramalho.enjoeitest.presentation.viewmodel.ProductItemViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
