--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#F77274</color>
     <color name="colorAccent_alpha">#CCF77274</color>
     <color name="light_gray">#f4f2f0</color>
+    <color name="button_outline">#edeae8</color>
 
 </resources>
